--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string-array name="sort_types">
         <item>Selection Sort</item>
         <item>Bubble Sort</item>
+        <item>Insertion Sort</item>
+        <item>Quick Sort</item>
+        <item>Merge Sort</item>
     </string-array>
 </resources>
